@@ -231,10 +231,12 @@ echo "--- Checking for the documentation generation tools.  NOTE: These "
 echo "--- are NOT required for proper compilation of the esound package."
 
 DOCS=""
+DISTDOCS=""
 DB2HTML=true
 AC_CHECK_PROG(have_db2html, db2html, yes, no)
 if test "x$have_db2html" = "xyes"; then
    DOCS=esound/index.html
+   DISTDOCS=docs/html
    DB2HTML=db2html
 fi
 
@@ -242,6 +244,7 @@ DB2PS=true
 AC_CHECK_PROG(have_db2ps, db2ps, yes, no)
 if test "x$have_db2ps" = "xyes"; then
    DOCS="$DOCS esound.ps"
+   DISTDOCS="$DISTDOCS docs/esound.ps"
    DB2PS=db2ps
 fi
 
@@ -311,6 +314,7 @@ AC_SUBST(LIBESDDSP)
 AC_SUBST(ESDDSP)
 AC_SUBST(DL_LIB)
 AC_SUBST(DOCS)
+AC_SUBST(DISTDOCS)
 AC_SUBST(DB2HTML)
 AC_SUBST(DB2PS)
 
